shorter texts and slogan

--- a/event-template/index.pug
+++ b/event-template/index.pug
@@ -7,13 +7,13 @@ html(lang="en" ng-app="devternity" ng-controller="LandingPageController" class="
     meta(name="author" content="DevTernity")
     meta(http-equiv="x-ua-compatible" content="ie=edge")
     meta(name="google-site-verification" content="b0JWvPtZAQJNl2DMy0flSRjC7xxN9g10Yhu_hSszLLw")
-    meta(name="description" content="The premium-quality annual international software development conference. DevTernity is the place where forward-thinking developers, pragmatic architects and engineering leaders grow.")
+    meta(name="description" content="The premium-quality annual international software development conference. DevTernity is the place where developers, architects and engineering leaders grow.")
     meta(name="keywords" content="software craftsmanship conferences, software development conferences, software developer conferences, developer conference, java conferences")
     meta(name="robots" content="index,follow")
     meta(property="og:url" content="http://devternity.com")
     meta(property="og:type" content="website")
     meta(property="og:title" content="DevTernity")
-    meta(property="og:description" content="The premium-quality annual international software development conference. DevTernity is the place where forward-thinking developers, pragmatic architects and engineering leaders grow.")
+    meta(property="og:description" content="The premium-quality annual international software development conference. DevTernity is the place where developers, architects and engineering leaders grow.")
     meta(property="og:image" content="https://devternity.com/images/logo_2017_filled.png")
     meta(property="og:image:width" content="512")
     meta(property="og:image:height" content="512")
@@ -296,7 +296,7 @@ html(lang="en" ng-app="devternity" ng-controller="LandingPageController" class="
                           else
                             span
                               i.fas.fa-clock 
-                              |  amazing talk confirmation pending
+                              |  amazing talk pending
                         else
                             span!=event.title
                         br
@@ -430,32 +430,20 @@ html(lang="en" ng-app="devternity" ng-controller="LandingPageController" class="
                     i.fa.fa-percent
                     |  Discount for individuals
                   div
-                    p 
-                      | We support people who take responsibility for their education. If you are self-funding your participation, you are entitled for a special discount. Please 
-                      strong: a(href=`mailto:${data.contactEmail}`) drop us
-                      |  an email.
+                    p Not backed by a company? Get in touch!
                 section(class="feature 4u 12u$(small)")
                   h3.title 
                     i.fa.fa-percent
-                    |  Discount for evangelists
+                    |  Discount for meetup organisers
                   div
-                    p 
-                      | Mention us on your blog/page/user group, rate our 
-                      strong: a(href="https://www.facebook.com/devternity") Facebook page
-                      |  or leave a review on 
-                      strong: a(href="https://trustpilot.com/review/devternity.com") Trustpilot
-                      | . Then 
-                      strong: a(href=`mailto:${data.contactEmail}`) drop us
-                      |  an email and ask for discount.
+                    p Have a blog or a meetup? Get in touch!
                 section(class="feature 4u 12u$(small)")
                   h3.title 
                     i.fa.fa-percent
                     |  Discount for sponsors
                   div
-                    p 
-                      | We provide sponsors with discount for supporting the event. Please 
-                      strong: a(href=`mailto:${data.contactEmail}`) contact us
-                      |  and receive an exclusive sponsorship offer.
+                    p Want to get sponsor discount? Get in touch!
+                      
 
 
 
