--- a/event-template/index.pug
+++ b/event-template/index.pug
@@ -202,7 +202,7 @@ html(lang="en" ng-app="devternity" ng-controller="LandingPageController" class="
           header
             h2
             p 
-              | DevTernity is the top international conference in Europe. 
+              | DevTernity is the top tech conference in Europe. 
             h2
             p 
               | We turn developers into architects and engineering leaders since 2015.
