--- a/event-template/index.pug
+++ b/event-template/index.pug
@@ -387,7 +387,11 @@ html(lang="en" ng-app="devternity" ng-controller="LandingPageController" class="
               each link, social in data.socials
                 a(href=link)
                   i(class=`fab fa-${social}`)
-                |  &nbsp;                
+                |  &nbsp;        
+          #fb-root
+            script (function(d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) return; js = d.createElement(s); js.id = id; js.src = "https://connect.facebook.net/en_US/sdk.js#xfbml=1"; fjs.parentNode.insertBefore(js, fjs);}(document, 'script', 'facebook-jssdk'));
+
+          .fb-like(data-width="320px" data-href="https://www.facebook.com/devternity" data-layout="standard" data-action="like" data-show-faces="true")                        
 
     section#tickets-container.wrapper.style1.tickets.align-center
       div.container
