registration button title changed

--- a/event-template/index.pug
+++ b/event-template/index.pug
@@ -429,7 +429,7 @@ html(lang="en" ng-app="devternity" ng-controller="LandingPageController" class="
             div.row
               section(class="12u 12u$(small)")
                 if data.status != 'booked'
-                  a.button.pulse(href=data.register style="padding: 0 0.5em") Get your ticket now and save #{data.pricing.products[2].extra}€
+                  a.button.pulse(href=data.register style="padding: 0 0.5em") Register now and save #{data.pricing.products[2].extra}€
           section(class="feature 3u 12u$(medium) 12u$(small)")
             | &nbsp;
 
