--- a/event-template/index.pug
+++ b/event-template/index.pug
@@ -231,7 +231,7 @@ html(lang="en" ng-app="devternity" ng-controller="LandingPageController" class="
           button.remodal-close(data-remodal-action="close")
           div.embed-container
             div
-              p 
+              p(style="font-size: 12px; margin: 0") 
                 | #{data.venue_name}, #{data.venue_address}, #{data.city}, #{data.venue_postal_code} 
                 a(href=data.venue_map target="_blank"): i.fas.fa-map-marker-alt
               img(src="images/libka.jpg" alt="National Library of Latvia" style="width:100%")
